Refactor of annotation processor